@@ -71,7 +71,7 @@ public class MatchTests extends AbstractFunctionTestCase {
     }
 
     private static String matchTypeErrorSupplier(boolean includeOrdinal, List<Set<DataType>> validPerPosition, List<DataType> types) {
-        return "[] cannot operate on [" + types.getFirst().typeName() + "], which is not a field from an index mapping";
+        return "[] cannot operate on [" + types.get(0).typeName() + "], which is not a field from an index mapping";
     }
 
     private static List<DataType> validStringDataTypes() {
